Bug 161198 - Negative / inverted highlight when hovering Navigator elements (or Draw tabs) no longer shown
Summary: Negative / inverted highlight when hovering Navigator elements (or Draw tabs)...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2024-05-21 11:34 UTC by stragu
Modified: 2024-06-03 08:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-05-21 11:34:48 UTC
Steps:
1. Open Writer document with e.g. image or headings
2. Hover over image or heading in Navigator

Result: no more inverted highlight (sdr::overlay::OverlayType::Invert) of element on canvas.

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ae798781ef4df7a1fdef13af0bc459bf4f6e7b4c
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Bibisected with linux-64-24.8 repo to first bad build [018c3bf2a3803eba0ca425cdb68b3ea3397fd2ca] which is:

commit 1f86fdd4b5428a8c7b253051cca93429dc71f894
author	Noel Grandin 	Tue Apr 23 16:10:48 2024 +0200
committer	Noel Grandin 	Tue Apr 23 18:50:35 2024 +0200
tdf#160787 Calc active cell cursor has small transparent corners
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166543

Noel, can you please have a look?
Comment 1 RGB 2024-05-21 21:30:48 UTC
I can confirm the problem with

Version: 24.8.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: a17e39caaf73108bee692d6f64a44c62f4066f1d
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: es-ES (es_ES.UTF-8); UI: es-ES
Calc: threaded

[Not sure if related, but the new Draw feature advertised on the release notes that highlight objects belonging to a given layer by hovering on the corresponding layer tab, doesn't work either.]
Comment 2 stragu 2024-05-22 01:22:53 UTC
(In reply to RGB from comment #1)
> [Not sure if related, but the new Draw feature advertised on the release
> notes that highlight objects belonging to a given layer by hovering on the
> corresponding layer tab, doesn't work either.]
Yes, same function is used there.
Comment 3 Commit Notification 2024-06-01 08:23:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/302a221856809e2b046cb9fb1675bfff4d86a37d

tdf#161198 tdf#161322 fix selection overlays

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 stragu 2024-06-03 08:28:42 UTC
Thanks Noel, verified in:

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1f15d097cace14ca6e44e7652f460aa3fa7bd150
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded