tdf#161198 tdf#161322 fix selection overlays

revert
    commit 7b1405689d4246e0e37e8759f03e1962af964cec
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 19 22:56:04 2024 +0200
    reduce the number of drawing primitives we create in
    OverlaySelection

Change-Id: I868540aadb3a75582990ae4491807991617215b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168253
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>